syntax = "proto3";

package mcp.v1;

option go_package = "github.com/gftdcojp/dapr-agents-go/gen/mcp/v1;mcpv1";

// MCPService provides Model Context Protocol operations
service MCPService {
  // GetServerInfo returns server information and capabilities
  rpc GetServerInfo(GetServerInfoRequest) returns (GetServerInfoResponse);

  // ListTools returns all available tools
  rpc ListTools(ListToolsRequest) returns (ListToolsResponse);

  // CallTool executes a tool with the given arguments
  rpc CallTool(CallToolRequest) returns (CallToolResponse);

  // ListPrompts returns all available prompts
  rpc ListPrompts(ListPromptsRequest) returns (ListPromptsResponse);

  // GetPrompt returns a specific prompt template
  rpc GetPrompt(GetPromptRequest) returns (GetPromptResponse);

  // ListResources returns all available resources
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);

  // GetResource returns a specific resource
  rpc GetResource(GetResourceRequest) returns (GetResourceResponse);

  // ListAgents returns all available agents
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);

  // RunAgent executes an agent with the given prompt (streaming)
  rpc RunAgent(RunAgentRequest) returns (stream RunAgentResponse);

  // RunAgentSync executes an agent synchronously
  rpc RunAgentSync(RunAgentRequest) returns (RunAgentSyncResponse);
}

// Server Info
message GetServerInfoRequest {}

message GetServerInfoResponse {
  string name = 1;
  string version = 2;
  string description = 3;
  repeated string capabilities = 4;
  map<string, string> metadata = 5;
}

// Tools
message ListToolsRequest {}

message ListToolsResponse {
  repeated Tool tools = 1;
}

message Tool {
  string name = 1;
  string description = 2;
  string input_schema_json = 3; // JSON Schema as string
}

message CallToolRequest {
  string name = 1;
  string arguments_json = 2; // JSON arguments as string
}

message CallToolResponse {
  repeated Content content = 1;
  bool is_error = 2;
}

message Content {
  string type = 1; // text, image, resource
  string text = 2;
  string data = 3; // base64 for images
  string uri = 4;  // for resources
  string mime_type = 5;
}

// Prompts
message ListPromptsRequest {}

message ListPromptsResponse {
  repeated Prompt prompts = 1;
}

message Prompt {
  string name = 1;
  string description = 2;
  repeated PromptArgument arguments = 3;
}

message PromptArgument {
  string name = 1;
  string description = 2;
  bool required = 3;
}

message GetPromptRequest {
  string name = 1;
  map<string, string> arguments = 2;
}

message GetPromptResponse {
  string description = 1;
  repeated PromptMessage messages = 2;
}

message PromptMessage {
  string role = 1;
  string content = 2;
}

// Resources
message ListResourcesRequest {}

message ListResourcesResponse {
  repeated Resource resources = 1;
}

message Resource {
  string uri = 1;
  string name = 2;
  string description = 3;
  string mime_type = 4;
}

message GetResourceRequest {
  string uri = 1;
}

message GetResourceResponse {
  repeated ResourceContent contents = 1;
}

message ResourceContent {
  string uri = 1;
  string mime_type = 2;
  string text = 3;
  bytes blob = 4;
}

// Agents
message ListAgentsRequest {}

message ListAgentsResponse {
  repeated Agent agents = 1;
}

message Agent {
  string name = 1;
  string description = 2;
  repeated string tools = 3;
}

message RunAgentRequest {
  string name = 1;
  string prompt = 2;
  string context_json = 3; // JSON context as string
  bool synchronous = 4;
}

message RunAgentResponse {
  string event_type = 1; // start, step, result, error, end
  string data_json = 2;  // JSON data as string
}

message RunAgentSyncResponse {
  string workflow_id = 1;
  string status = 2;
  string result = 3;
  repeated AgentStep steps = 4;
  string error = 5;
}

message AgentStep {
  string type = 1;
  string name = 2;
  string input_json = 3;
  string output_json = 4;
  int64 timestamp = 5;
}
